// E-Commerce System Database Schema

Table inventory {
  product_id int [pk, increment]
  product_name varchar(100) [not null]
  quantity_available int [not null]
  unit_price decimal(10,2) [not null]
  last_updated timestamp [default: `CURRENT_TIMESTAMP`]
}

Table customers {
  customer_id int [pk, increment]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  phone varchar(20)
  loyalty_points int [default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table pricing_rules {
  rule_id int [pk, increment]
  product_id int
  min_quantity int
  discount_percentage decimal(5,2)
}

Table tax_rates {
  region varchar(50) [pk]
  tax_rate decimal(5,2) [not null]
}

Table orders {
  order_id int [pk, increment]
  customer_id int [not null, ref: > customers.customer_id]
  order_date timestamp [default: `CURRENT_TIMESTAMP`]
  total_amount decimal(10,2) [not null]
  status varchar(50) [default: 'PENDING']
}

Table order_items {
  item_id int [pk, increment]
  order_id int [not null, ref: > orders.order_id]
  product_id int [not null, ref: > inventory.product_id]
  quantity int [not null]
  price_at_purchase decimal(10,2) [not null]
}

Table notification_log {
  notification_id int [pk, increment]
  order_id int [not null]
  customer_id int [not null]
  notification_type varchar(50)
  message text
  sent_at timestamp [default: `CURRENT_TIMESTAMP`]
}
